// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Projects get controller: GET /projects should return all projects by default 1`] = `
Object {
  "data": Array [
    Object {
      "description": "An Angular components library to use Heroicons.com in your Angular projects.",
      "keywords": Array [
        "typescript",
        "javascript",
        "angular",
        "nodejs",
        "library",
        "components",
        "tailwindcss",
        "npm",
      ],
      "name": "ng-heroicons",
      "npm": "https://www.npmjs.com/package/@dimaslz/ng-heroicons",
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/ng-heroicons",
      ],
      "stack": Array [
        "typescript",
        "javascript",
        "angular",
        "nodejs",
        "tailwindcss",
      ],
      "url": "https://ng-heroicons.dimaslz.dev",
    },
    Object {
      "description": "A tool to create mock Api responses with your custom schema.",
      "keywords": Array [
        "typescript",
        "preact",
        "nodejs",
        "vitejs",
        "tools",
        "api",
        "tailwindcss",
      ],
      "name": "Randomdata",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "typescript",
        "preact",
        "nodejs",
        "vitejs",
        "tailwindcss",
      ],
      "url": "https://randomdata.loremapi.io",
    },
    Object {
      "description": "A tool to create a framework icon component from a SVG",
      "keywords": Array [
        "nextjs",
        "nodejs",
        "tailwindcss",
        "tools",
      ],
      "name": "Framework icon builder",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "nextjs",
        "nodejs",
        "tailwindcss",
      ],
      "url": "https://svg-icon-2-fw-component.dimaslz.dev",
    },
    Object {
      "description": "Deploy any project easily, like Vercel or Heroku but in your self hosting.",
      "keywords": Array [
        "vitejs",
        "typescript",
        "vue3",
        "pinia",
        "tailwindcss",
        "docker",
        "tools",
        "github actions",
      ],
      "name": "Fito deploy",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "vitejs",
        "typescript",
        "vue3",
        "pinia",
        "tailwindcss",
        "docker",
        "github actions",
      ],
      "url": "https://fito-deploy.dimaslz.dev",
    },
    Object {
      "description": "Mock and document your Api's",
      "keywords": Array [
        "angular",
        "nodejs",
        "tailwindcss",
        "typescript",
        "tools",
        "api",
        "developers",
      ],
      "name": "Loremapi",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "angular",
        "nodejs",
        "tailwindcss",
        "typescript",
      ],
      "url": "https://loremapi.io",
    },
    Object {
      "description": "My online CV",
      "keywords": Array [
        "svelte",
        "tailwindcss",
        "typescript",
        "cv",
        "landing",
      ],
      "name": "cv.dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz-cv",
      ],
      "stack": Array [
        "svelte",
        "tailwindcss",
        "typescript",
      ],
      "url": "https://cv.dimaslz.dev",
    },
    Object {
      "description": "My professional info by API",
      "keywords": Array [
        "nodejs",
        "typescript",
        "cv",
        "api",
      ],
      "name": "api.dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz-api",
      ],
      "stack": Array [
        "nodejs",
        "typescript",
      ],
      "url": "https://api.dimaslz.dev",
    },
    Object {
      "description": "Dev landing",
      "keywords": Array [
        "javascript",
        "tailwindcss",
        "landing",
      ],
      "name": "dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz.io-landing",
      ],
      "stack": Array [
        "javascript",
        "tailwindcss",
      ],
      "url": "https://dimaslz.dev",
    },
    Object {
      "description": "Profesional landing profile",
      "keywords": Array [
        "nextjs",
        "typescript",
        "tailwindcss",
      ],
      "name": "dimaslz.com",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz.io",
      ],
      "stack": Array [
        "nextjs",
        "typescript",
        "tailwindcss",
      ],
      "url": "https://dimaslz.com",
    },
  ],
}
`;

exports[`Projects get controller: GET /projects should return projects which match with the query 1`] = `
Object {
  "data": Array [
    Object {
      "description": "An Angular components library to use Heroicons.com in your Angular projects.",
      "keywords": Array [
        "typescript",
        "javascript",
        "angular",
        "nodejs",
        "library",
        "components",
        "tailwindcss",
        "npm",
      ],
      "name": "ng-heroicons",
      "npm": "https://www.npmjs.com/package/@dimaslz/ng-heroicons",
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/ng-heroicons",
      ],
      "stack": Array [
        "typescript",
        "javascript",
        "angular",
        "nodejs",
        "tailwindcss",
      ],
      "url": "https://ng-heroicons.dimaslz.dev",
    },
    Object {
      "description": "A tool to create mock Api responses with your custom schema.",
      "keywords": Array [
        "typescript",
        "preact",
        "nodejs",
        "vitejs",
        "tools",
        "api",
        "tailwindcss",
      ],
      "name": "Randomdata",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "typescript",
        "preact",
        "nodejs",
        "vitejs",
        "tailwindcss",
      ],
      "url": "https://randomdata.loremapi.io",
    },
    Object {
      "description": "Deploy any project easily, like Vercel or Heroku but in your self hosting.",
      "keywords": Array [
        "vitejs",
        "typescript",
        "vue3",
        "pinia",
        "tailwindcss",
        "docker",
        "tools",
        "github actions",
      ],
      "name": "Fito deploy",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "vitejs",
        "typescript",
        "vue3",
        "pinia",
        "tailwindcss",
        "docker",
        "github actions",
      ],
      "url": "https://fito-deploy.dimaslz.dev",
    },
    Object {
      "description": "Mock and document your Api's",
      "keywords": Array [
        "angular",
        "nodejs",
        "tailwindcss",
        "typescript",
        "tools",
        "api",
        "developers",
      ],
      "name": "Loremapi",
      "npm": null,
      "public": false,
      "repository": Array [],
      "stack": Array [
        "angular",
        "nodejs",
        "tailwindcss",
        "typescript",
      ],
      "url": "https://loremapi.io",
    },
    Object {
      "description": "My online CV",
      "keywords": Array [
        "svelte",
        "tailwindcss",
        "typescript",
        "cv",
        "landing",
      ],
      "name": "cv.dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz-cv",
      ],
      "stack": Array [
        "svelte",
        "tailwindcss",
        "typescript",
      ],
      "url": "https://cv.dimaslz.dev",
    },
    Object {
      "description": "My professional info by API",
      "keywords": Array [
        "nodejs",
        "typescript",
        "cv",
        "api",
      ],
      "name": "api.dimaslz.dev",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz-api",
      ],
      "stack": Array [
        "nodejs",
        "typescript",
      ],
      "url": "https://api.dimaslz.dev",
    },
    Object {
      "description": "Profesional landing profile",
      "keywords": Array [
        "nextjs",
        "typescript",
        "tailwindcss",
      ],
      "name": "dimaslz.com",
      "npm": null,
      "public": true,
      "repository": Array [
        "https://github.com/dimaslz/dimaslz.io",
      ],
      "stack": Array [
        "nextjs",
        "typescript",
        "tailwindcss",
      ],
      "url": "https://dimaslz.com",
    },
  ],
}
`;
